# gotenberg-client-python

./: LICENSE  README.md  pyproject.toml
gotenberg_client/: __init__.py
gotenberg_client/api/chromium/: post_forms_chromium_convert_html.py  post_forms_chromium_convert_markdown.py  post_forms_chromium_convert_url.py
gotenberg_client/api/libreoffice/: post_forms_libreoffice_convert.py
gotenberg_client/api/pdfengines/: post_forms_pdfengines_convert.py  post_forms_pdfengines_merge.py
gotenberg_client/models/: __init__.py  html_conversion_request_body.py  markdown_conversion_request_body.py  merge_files_request_body.py  office_conversion_request_body.py  post_forms_pdfengines_convert_multipart_data.py  post_forms_pdfengines_merge_multipart_data.py  url_conversion_request_body.py
